...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Fab_AddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:src="@drawable/ic_favorite_black_24dp" />
    </FrameLayout>
...
